resources/clair/stage/clair.indexer.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/timeout: '5m'
    haproxy.router.openshift.io/disable_cookies: 'true'
  labels:
    service: clair-indexer
  name: clair-indexer-stage 
spec:
  host: clair.stage.quay.io
  path: /indexer
  to:
    kind: Service
    name: clair-indexer
    weight: 100
  port:
    targetPort: http-transport
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
