resources/clair/stage/clair.notifier.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/disable_cookies: 'true'
  labels:
    service: clair-notifier
  name: clair-notifier-stage 
spec:
  host: clair.stage.quay.io
  path: /notifier
  to:
    kind: Service
    name: clair-notifier
    weight: 100
  port:
    targetPort: http-transport
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
