resources/clair/stage/clair.route.indexer.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: clair-indexer
  name: clair-indexer-stage 
spec:
  host: TBD
  to:
    kind: Service
    name: clair-indexer
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
