resources/clair/stage/clair.route.notifier.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: clair-notifier
  name: clair-notifier-stage 
spec:
  host: TBD
  to:
    kind: Service
    name: clair-notifier
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
